# resignation-delete

./: BUILD.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
.trae/specs/: checklist.md  spec.md  tasks.md
src/: cleaner.rs  coordinator.rs  main.rs  models.rs  scanner.rs
src/scanners/: ai_tools.rs  browsers.rs  git_ssh.rs  jetbrains.rs  mod.rs  vscode.rs
