[package]
name = "resignation_delete"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.28"
egui = "0.28"
dirs = "5.0"
glob = "0.3"
log = "0.4"
simple_logger = "5.0"
thiserror = "2.0"
walkdir = "2.5"
rand = "0.8"
chrono = "0.4"
